fix height of app header and align items center

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,9 +10,13 @@
   margin-bottom: auto;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   position: relative;
   box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.08);
   width: 100%;
+  height: 60px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .center-logo{
@@ -23,4 +27,9 @@
 }
 .css-1oqqzyl-MuiContainer-root {
   padding: 0px!important;
+}
+
+.icons{
+  width: 32px;
+  height: 32px;
 }
